--- a/03-observable-subscription-management/index.html
+++ b/03-observable-subscription-management/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>01-hello</title>
+  <title>03-observable-subscription-management</title>
 </head>
 
 <body>
   <div id="app">
-    <h2 id="timer">Hello! It has been 0 seconds</h2>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
