add polling to display

--- a/08-http-polling/index.html
+++ b/08-http-polling/index.html
@@ -9,8 +9,7 @@
 
 <body>
   <div id="app">
-    <h2 id="status"></h2>
-    <p>Made 0 requests</p>
+    <p id="count">Made 0 requests</p>
   </div>
   <script type="module" src="/src/main.ts"></script>
 </body>
